--- a/Video Games/View/Base.lproj/Main.storyboard
+++ b/Video Games/View/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="asf" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Kf-Yt-o1N">
-                                <rect key="frame" x="20" y="301" width="30" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Kf-Yt-o1N">
+                                <rect key="frame" x="20" y="297" width="6" height="24"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                 </accessibility>
@@ -25,8 +25,8 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="asfd" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="You-Ff-jjc">
-                                <rect key="frame" x="20" y="333" width="30" height="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="You-Ff-jjc">
+                                <rect key="frame" x="20" y="331" width="4.5" height="18"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                 </accessibility>
@@ -37,8 +37,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDj-Xo-ygB">
                                 <rect key="frame" x="20" y="359" width="40" height="40"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="84" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wcx-oE-Bkf">
-                                        <rect key="frame" x="8.5" y="10" width="23" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wcx-oE-Bkf">
+                                        <rect key="frame" x="20" y="20" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -57,7 +57,8 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qtq-r5-5m3">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="293"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="289"/>
+                                <color key="backgroundColor" systemColor="labelColor"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                 </accessibility>
@@ -68,7 +69,6 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CtV-Xm-iaI">
                                         <rect key="frame" x="10" y="0.0" width="374" height="399"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -101,7 +101,7 @@
                         <viewLayoutGuide key="safeArea" id="eTv-3D-oBI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="HDj-Xo-ygB" firstAttribute="leading" secondItem="You-Ff-jjc" secondAttribute="leading" id="0If-IG-xJU"/>
+                            <constraint firstItem="HDj-Xo-ygB" firstAttribute="leading" secondItem="4fs-YR-ad4" secondAttribute="leading" constant="20" id="0If-IG-xJU"/>
                             <constraint firstItem="BbP-uj-obc" firstAttribute="leading" secondItem="4fs-YR-ad4" secondAttribute="leading" constant="10" id="0eF-Ag-Nv8"/>
                             <constraint firstItem="eTv-3D-oBI" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="You-Ff-jjc" secondAttribute="trailing" symbolic="YES" id="18w-ha-PQH"/>
                             <constraint firstItem="qtq-r5-5m3" firstAttribute="trailing" secondItem="eTv-3D-oBI" secondAttribute="trailing" id="CDg-eJ-wXq"/>
@@ -113,12 +113,12 @@
                             <constraint firstAttribute="bottomMargin" secondItem="BbP-uj-obc" secondAttribute="bottom" id="Q7o-G8-Sne"/>
                             <constraint firstItem="eTv-3D-oBI" firstAttribute="trailing" secondItem="Ibm-fa-lX9" secondAttribute="trailing" constant="20" id="QZH-Js-yh3"/>
                             <constraint firstItem="eTv-3D-oBI" firstAttribute="bottom" secondItem="HDj-Xo-ygB" secondAttribute="bottom" constant="409" id="aoj-wg-lgh"/>
-                            <constraint firstItem="You-Ff-jjc" firstAttribute="top" secondItem="0Kf-Yt-o1N" secondAttribute="bottom" constant="8" symbolic="YES" id="bzM-Iu-rjj"/>
+                            <constraint firstItem="You-Ff-jjc" firstAttribute="top" secondItem="0Kf-Yt-o1N" secondAttribute="bottom" constant="10" id="bzM-Iu-rjj"/>
                             <constraint firstItem="BbP-uj-obc" firstAttribute="centerX" secondItem="qtq-r5-5m3" secondAttribute="centerX" id="jBy-bR-h5R"/>
                             <constraint firstItem="Ibm-fa-lX9" firstAttribute="top" secondItem="eTv-3D-oBI" secondAttribute="top" constant="260" id="nau-ra-wo3"/>
                             <constraint firstItem="You-Ff-jjc" firstAttribute="leading" secondItem="eTv-3D-oBI" secondAttribute="leading" constant="20" id="oNh-nE-FoQ"/>
                             <constraint firstItem="qtq-r5-5m3" firstAttribute="top" secondItem="eTv-3D-oBI" secondAttribute="top" id="vtz-CC-E3z"/>
-                            <constraint firstItem="HDj-Xo-ygB" firstAttribute="top" secondItem="You-Ff-jjc" secondAttribute="bottom" constant="8" symbolic="YES" id="xhZ-hW-aeH"/>
+                            <constraint firstItem="HDj-Xo-ygB" firstAttribute="top" secondItem="You-Ff-jjc" secondAttribute="bottom" constant="10" id="xhZ-hW-aeH"/>
                             <constraint firstItem="BbP-uj-obc" firstAttribute="top" secondItem="HDj-Xo-ygB" secondAttribute="bottom" constant="10" id="yMl-Cz-SDd"/>
                         </constraints>
                     </view>
@@ -133,7 +133,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tUF-4Q-2cY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="810.14492753623199" y="825"/>
+            <point key="canvasLocation" x="809" y="1019"/>
         </scene>
         <!--Page Content View Controller-->
         <scene sceneID="nmm-5U-1kD">
@@ -219,7 +219,7 @@
                                             <constraint firstAttribute="height" constant="318" id="AUA-3A-8zW"/>
                                         </constraints>
                                     </stackView>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XqU-ix-JeV">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XqU-ix-JeV">
                                         <rect key="frame" x="0.0" y="327" width="414" height="391"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mmO-ek-p5A">
@@ -283,16 +283,42 @@
                     <view key="view" contentMode="scaleToFill" id="mIk-3E-dH0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PwP-HC-GGt">
+                                <rect key="frame" x="20" y="44" width="374" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I9S-F4-S9v">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="9or-0e-pkB"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="PwP-HC-GGt" firstAttribute="top" secondItem="9or-0e-pkB" secondAttribute="top" id="03h-Zf-91s"/>
+                            <constraint firstItem="9or-0e-pkB" firstAttribute="trailing" secondItem="PwP-HC-GGt" secondAttribute="trailing" constant="20" id="V3e-UC-tI1"/>
+                            <constraint firstItem="PwP-HC-GGt" firstAttribute="leading" secondItem="9or-0e-pkB" secondAttribute="leading" constant="20" id="ZHC-5b-VSp"/>
+                            <constraint firstItem="PwP-HC-GGt" firstAttribute="bottom" secondItem="9or-0e-pkB" secondAttribute="bottom" id="bel-1m-0mE"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="8zU-CA-sjB"/>
+                    <connections>
+                        <outlet property="collectionView" destination="PwP-HC-GGt" id="c8r-rq-fWx"/>
+                        <segue destination="Sxz-o8-RXo" kind="showDetail" identifier="goToDetailView" id="nOs-Qp-TNK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aCk-L0-8F4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1663.7681159420292" y="421.875"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="nOs-Qp-TNK"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="hand.thumbsup" catalog="system" width="128" height="128"/>
         <systemColor name="labelColor">
