--- a/Video Games/View/Base.lproj/Main.storyboard
+++ b/Video Games/View/Base.lproj/Main.storyboard
@@ -22,7 +22,6 @@
                                     <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                 </accessibility>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="You-Ff-jjc">
@@ -40,7 +39,6 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wcx-oE-Bkf">
                                         <rect key="frame" x="20" y="20" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -85,7 +83,7 @@
                                 <viewLayoutGuide key="contentLayoutGuide" id="dVP-bo-0Ag"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="NNQ-xt-fKE"/>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ibm-fa-lX9">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ibm-fa-lX9">
                                 <rect key="frame" x="359" y="259" width="35" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="4tp-Ox-W8e"/>
@@ -124,6 +122,7 @@
                     </view>
                     <connections>
                         <outlet property="descriptionText" destination="CtV-Xm-iaI" id="LJu-TT-czd"/>
+                        <outlet property="favButton" destination="Ibm-fa-lX9" id="i8a-14-dTf"/>
                         <outlet property="gameImage" destination="qtq-r5-5m3" id="qtt-3k-Y8p"/>
                         <outlet property="gameName" destination="0Kf-Yt-o1N" id="ERK-Sy-96w"/>
                         <outlet property="gameReleaseDate" destination="You-Ff-jjc" id="rCW-HN-Izs"/>
@@ -175,7 +174,7 @@
             </objects>
             <point key="canvasLocation" x="-33" y="873"/>
         </scene>
-        <!--Item-->
+        <!--Home-->
         <scene sceneID="d4w-A7-gQL">
             <objects>
                 <viewController id="5AU-2S-C2Y" customClass="HomeViewController" customModule="Video_Games" customModuleProvider="target" sceneMemberID="viewController">
@@ -185,6 +184,7 @@
                         <subviews>
                             <textField autoresizesSubviews="NO" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search..." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="pA8-CS-Lna">
                                 <rect key="frame" x="20" y="54" width="374" height="34"/>
+                                <color key="backgroundColor" systemColor="systemGray3Color"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="search" textContentType="nickname"/>
                                 <connections>
@@ -209,10 +209,8 @@
                                                     <segue destination="Iao-1p-5fq" kind="embed" id="Vuz-r2-HZQ"/>
                                                 </connections>
                                             </containerView>
-                                            <pageControl contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Ehk-mf-67t">
+                                            <pageControl userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Ehk-mf-67t">
                                                 <rect key="frame" x="0.0" y="290.5" width="414" height="27.5"/>
-                                                <color key="tintColor" systemColor="labelColor"/>
-                                                <color key="pageIndicatorTintColor" systemColor="placeholderTextColor"/>
                                             </pageControl>
                                         </subviews>
                                         <constraints>
@@ -245,7 +243,7 @@
                             <constraint firstItem="QYf-an-JdX" firstAttribute="leading" secondItem="isA-J2-C0l" secondAttribute="leading" id="qzy-0e-udx"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="eik-zl-lyT"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="eik-zl-lyT"/>
                     <connections>
                         <outlet property="collectionView" destination="XqU-ix-JeV" id="toi-6I-T1V"/>
                         <outlet property="pageControl" destination="Ehk-mf-67t" id="ir5-P2-7ae"/>
@@ -276,7 +274,7 @@
             </objects>
             <point key="canvasLocation" x="810" y="115"/>
         </scene>
-        <!--Item-->
+        <!--Favourites-->
         <scene sceneID="vBO-QT-6Qh">
             <objects>
                 <viewController id="gjy-qm-Izz" customClass="FavouritesViewController" customModule="Video_Games" customModuleProvider="target" sceneMemberID="viewController">
@@ -285,13 +283,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PwP-HC-GGt">
-                                <rect key="frame" x="20" y="44" width="374" height="769"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I9S-F4-S9v">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="374" height="110"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
@@ -300,12 +298,12 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="PwP-HC-GGt" firstAttribute="top" secondItem="9or-0e-pkB" secondAttribute="top" id="03h-Zf-91s"/>
-                            <constraint firstItem="9or-0e-pkB" firstAttribute="trailing" secondItem="PwP-HC-GGt" secondAttribute="trailing" constant="20" id="V3e-UC-tI1"/>
-                            <constraint firstItem="PwP-HC-GGt" firstAttribute="leading" secondItem="9or-0e-pkB" secondAttribute="leading" constant="20" id="ZHC-5b-VSp"/>
+                            <constraint firstItem="9or-0e-pkB" firstAttribute="trailing" secondItem="PwP-HC-GGt" secondAttribute="trailing" id="V3e-UC-tI1"/>
+                            <constraint firstItem="PwP-HC-GGt" firstAttribute="leading" secondItem="9or-0e-pkB" secondAttribute="leading" id="ZHC-5b-VSp"/>
                             <constraint firstItem="PwP-HC-GGt" firstAttribute="bottom" secondItem="9or-0e-pkB" secondAttribute="bottom" id="bel-1m-0mE"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="8zU-CA-sjB"/>
+                    <tabBarItem key="tabBarItem" title="Favourites" image="star.fill" catalog="system" id="8zU-CA-sjB"/>
                     <connections>
                         <outlet property="collectionView" destination="PwP-HC-GGt" id="c8r-rq-fWx"/>
                         <segue destination="Sxz-o8-RXo" kind="showDetail" identifier="goToDetailView" id="nOs-Qp-TNK"/>
@@ -317,18 +315,20 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="nOs-Qp-TNK"/>
+        <segue reference="UFx-CJ-faj"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="hand.thumbsup" catalog="system" width="128" height="128"/>
+        <image name="house.fill" catalog="system" width="128" height="106"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="placeholderTextColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
